--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.1",
-    "animejs": "^3.2.2",
     "next": "^14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/animejs": "^3.1.13",
     "@types/node": "^20.11.30",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "autoprefixer": "^10.4.24",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.4.5"
   }
 }
