--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.1",
+    "ajv": "^8.17.1",
     "next": "^14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
